--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="info-item">
                     <h4>Dernières Nouvelles</h4>
                     <p>Restez informé sur nos dernières opérations, actualités, et événements en consultant notre section des actualités.</p>
-                    <a href="news.html" class="btn">Voir les actualités</a>
+                    <a href="news/news.html" class="btn">Voir les actualités</a>
                 </div>
             </section>
 
